# rtl_buddy

./: .gitignore  AGENTS.md  README.md  mkdocs.yml  pyproject.toml
.claude/skills/audit-bundled-skill/: SKILL.md
.claude/skills/audit-docs/: SKILL.md
.claude/skills/audit-template/: SKILL.md
.github/: labels.json  sync-labels.sh
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  docs.yml  feature.yml
.github/workflows/: claude.yml  docs.yml  lint.yml  release.yml  test.yml
docs/: CONTRIBUTING.md  agents.md  index.md  install.md  known-issues.md  migrations.md  quickstart.md  robots.txt
docs/concepts/: abv-simulation.md  axi-profile.md  cdc.md  cocotb.md  execution-context.md  expected-failures.md  fpga.md  fpv.md  hier.md  hub.md  mut.md  plugins.md  pnr.md  power.md  regressions.md  root-config.md  simulators.md  synthesis.md  tests.md  tool-check.md  wave.md  xplr.md
docs/development/: docs.md  guidelines.md  setup.md
docs/migrations/: submodule-to-uv.md  v2-to-v3.md  v4-to-v5.md
docs/reference/: cli.md  yaml.md
scripts/: check_docs_frontmatter.py  gen_cli_reference.py
src/rtl_buddy/: __init__.py  __main__.py  artifact_lock.py  docs_access.py  errors.py  exec_context.py  logging_utils.py  process_utils.py  rtl_buddy.py  seed_mode.py  skill_install.py  tool_manifest.py
src/rtl_buddy/config/: __init__.py  cdc.py  coverage.py  coverview.py  env_file.py  fpga.py  fpga_platform.py  fpv.py  model.py  mut.py  pdk.py  platform.py  pnr.py  pnr_platform.py  power.py  reg.py  root.py  rtl.py  spec.py  suite.py  surfer.py  synth.py  systemc.py  test.py  tools.py  uvm.py  verible.py  xplr.py
src/rtl_buddy/hub/: __init__.py  axi_notebook_launcher.py  cdc_builder.py  cli.py  client.py  config.py  discovery.py  event_broker.py  launchagent.py  loop.py  model_discovery.py  protocol.py  resolver.py  send.py  server.py  state.py  status_client.py  test_discovery.py  view_builder.py  viewer_http.py
src/rtl_buddy/hub/schema/: __init__.py  hub-protocol-v1.json
src/rtl_buddy/nvim/: rtl_buddy_wave.lua
src/rtl_buddy/pnr/: __init__.py  flow.tcl.template
src/rtl_buddy/pnr/klayout/: def2stream.py  gds2png.py
src/rtl_buddy/runner/: __init__.py  cdc_results.py  cdc_runner.py  fpga_results.py  fpga_runner.py  fpv_results.py  fpv_runner.py  mut_results.py  mut_runner.py  pnr_results.py  pnr_runner.py  power_results.py  power_runner.py  synth_results.py  synth_runner.py  test_results.py  test_runner.py  xfail.py
src/rtl_buddy/skill/: SKILL.md  gitignore_snippet.txt
src/rtl_buddy/tools/: __init__.py  artifact_paths.py  axi_profile_rtl_buddy.py  cdc_constraints.py  cdc_publisher.py  cdc_rtl_buddy.py  cdc_vivado.py  cdc_xdc_audit.py  cocotb_sim.py  coverage.py  coverview.py  fpga_base.py  fpga_openxc7.py  fpga_openxc7_reports.py  fpga_vivado.py  fpga_vivado_flow.py  fpga_vivado_reports.py  fpv_cex_finder.py  fpv_coi.py  fpv_log_parse.py  fpv_solver_pin.py  fpv_vacuity.py  hier_rtl_buddy_view.py  nvim_install.py  pnr_openroad.py  power_base.py  power_openroad.py  pywellen_compat.py  saif_from_trace.py  sby_fpv.py  spec_trace.py  surfer_wcp.py  synth_openroad.py  synth_yosys.py  systemc_sim.py  verible.py  vlog_cov.py  vlog_filelist.py  vlog_post.py  vlog_sim.py  (+3 more)
src/rtl_buddy/xplr/: __init__.py  analysis.py  commands.py  gitprov.py  ledger.py  mockflow.py  schema.py  xplr-experiment-1.0.json
tests/: conftest.py  test_artifact_lock.py  test_axi_profile.py  test_builder_selection.py  test_cdc.py  test_cdc_check_xdc.py  test_cdc_constraints.py  test_cdc_publisher.py  test_cdc_vivado.py  test_cli_smoke.py  test_cli_with_fixture.py  test_cocotb_post.py  test_config_loaders.py  test_coverage_paths.py  test_docs_access.py  test_env_file.py  test_execution_context.py  test_fpga.py  test_fpga_openxc7.py  test_fpga_reports.py  test_fpv.py  test_fpv_coi.py  test_fpv_slang.py  test_fpv_vacuity.py  test_hier.py  test_hub_axi_notebook.py  test_hub_cdc_builder.py  test_hub_cli.py  test_hub_config.py  test_hub_discovery.py  test_hub_event_broker.py  test_hub_launchagent.py  test_hub_loop.py  test_hub_model_discovery.py  test_hub_port_in_use.py  test_hub_protocol.py  test_hub_resolve_e2e.py  test_hub_resolver.py  test_hub_send_and_snapshot.py  test_hub_send_cli.py  (+34 more)
tests/fixtures/cdc/: cdc_bad_domain_map.json  cdc_bad_overwaive.xdc  cdc_bad_report.json  cdc_bad_reset_map.json  cdc_bad_top.sdc  cdc_bad_top.sv  cdc_primitives.sv  cdc_ref_domain_map.json  cdc_ref_gappy.xdc  cdc_ref_good.xdc  cdc_ref_report.json  cdc_ref_reset_map.json  cdc_ref_top.sdc  cdc_ref_top.sv  cdc_ref_top.waivers  cdc_xpm_domain_map.json  cdc_xpm_overwaive.xdc  cdc_xpm_report.json  cdc_xpm_top.sdc  cdc_xpm_top.sv  vivado_cdc_clean.rpt  vivado_cdc_violations.rpt
tests/fixtures/fpga/: drc.rpt  methodology.rpt  power.rpt  timing_summary.rpt  timing_summary_fail.rpt  util.rpt
tests/fixtures/minimal_project/: models.yaml  regression.yaml  root_config.yaml  tests.yaml
tests/fixtures/minimal_project/src/: example.sv
tests/fixtures/xplr/invalid/: bad-created.json  bad-sha.json  bad-status.json  unknown-field.json
(+4 files in other folders)
