[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rtl_buddy"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
  "ruamel.yaml >= 0.18.15",
  "typer >= 0.19.2",
  "click >= 8.3.0",
  "pyserde[yaml] >= 0.27.0",
  "rich >= 14.0.0"
]

authors = [
  { name = "Zhi-Hern Loh"},
  { name = "Xie Jiacheng"}
]

description = "Python CLI for Verilog and SystemVerilog RTL testing, randomized regressions, coverage, and simulator workflow automation."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = [
  "SystemVerilog",
  "Verilog",
  "RTL",
  "ASIC",
  "FPGA",
  "EDA",
  "Verilator",
  "VCS",
  "regression testing",
  "verification",
  "coverage",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]

[project.urls]
Source = "https://github.com/rtl-buddy/rtl_buddy"
Documentation = "https://rtl-buddy.github.io/rtl_buddy/"
Tracker = "https://github.com/rtl-buddy/rtl_buddy/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/rtl_buddy"]
exclude = ["src/rtl_buddy/docs"]

[tool.hatch.build.targets.wheel.force-include]
"docs" = "rtl_buddy/docs"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mike>=2.1.0",
]

[project.scripts]
rtl_buddy = "rtl_buddy.__main__:main"
rtl-buddy = "rtl_buddy.__main__:main"
rb = "rtl_buddy.__main__:main"
