[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rtl_buddy"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
  "ruamel.yaml >= 0.18.15",
  "typer >= 0.19.2",
  "click >= 8.3.0",
  "pyserde[yaml] >= 0.27.0",
  "rich >= 14.0.0",
  "pywellen >= 0.20.0",
  "jsonschema >= 4.21.0",
  "websockets >= 12.0",
]

authors = [
  { name = "Zhi-Hern Loh"},
  { name = "Xie Jiacheng"}
]

description = "Python CLI for Verilog and SystemVerilog RTL testing, randomized regressions, coverage, and simulator workflow automation."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = [
  "SystemVerilog",
  "Verilog",
  "RTL",
  "ASIC",
  "FPGA",
  "EDA",
  "Verilator",
  "VCS",
  "regression testing",
  "verification",
  "coverage",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]

[project.urls]
Source = "https://github.com/rtl-buddy/rtl_buddy"
Documentation = "https://rtl-buddy.github.io/rtl_buddy/"
Tracker = "https://github.com/rtl-buddy/rtl_buddy/issues"

[tool.hatch.version]
source = "vcs"

# Source distribution only needs the inputs a downstream installer
# (pip, uv) actually requires: pyproject.toml, README.md, LICENSE, the
# package source under src/, and docs/ (because the bundled skill
# materializes them from the wheel). Dev/CI scaffolding (tests/,
# scripts/, .github/, .agents/, .claude/, mkdocs.yml, uv.lock,
# AGENTS.md, CLAUDE.md, .pre-commit-config.yaml, pytest.ini,
# CONTRIBUTORS) is not needed at install time and only inflates the
# release tarball.
[tool.hatch.build.targets.sdist]
include = [
  "src/rtl_buddy",
  "docs",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rtl_buddy"]
exclude = ["src/rtl_buddy/docs"]

[tool.hatch.build.targets.wheel.force-include]
"docs" = "rtl_buddy/docs"

[dependency-groups]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mike>=2.1.0",
]
lint = [
  "ruff>=0.11.0",
]
test = [
  "pytest>=9.0.3",
  "pytest-cov>=6.0.0",
  "pytest-asyncio>=0.24.0",
]
dev = [
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "test" },
]

[project.scripts]
rtl_buddy = "rtl_buddy.__main__:main"
rtl-buddy = "rtl_buddy.__main__:main"
rb = "rtl_buddy.__main__:main"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "E7", "E9"]

[tool.ruff.lint.per-file-ignores]
"src/rtl_buddy/runner/test_runner.py" = ["F403", "F405"]

[tool.coverage.run]
branch = true
source = ["src/rtl_buddy"]
omit = [
  "src/rtl_buddy/skill/*",
  "src/rtl_buddy/docs/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 48
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
